# StockAnalysis

./: .gitignore  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  GPU_SETUP.md  QUICK_START.md  README.md  README_FINAL.md  deployment_report.json  download_lfs.py  download_model.py  get_422.py  launch.py  main.py  pyproject.toml  requirements.txt  run_app.py  run_server.py  simple_server.py  start_server.bat  start_server.py  start_stockanalysis.bat  stockanalysis.db  stockanalysis_test.db  test_env.py  test_registration.html  test_risk_debug.py  test_server.py  test_start.py
.agents/workflows/: common-errors.md  documentation_diagram_skills.md  human_wechat_writing_skills.md  pytorch_gpu_uv.md  wechat_article_writing_skills.md
backend/: config.py  main.py  test_gpu_lock.py
backend/api/: data_router.py  enhanced_router.py  gpu_router.py  router.py
backend/auth/: database.py  dependencies.py  middleware.py  models.py  schemas.py  security.py
backend/core/: backtester.py  data.py  engine.py  fx.py  gpu_utils.py  ic_analyzer.py  llm.py  manager.py  model.py  progress.py  risk.py  scheduler.py
backend/models/: 000001_model.pth  600519_history.npz  600519_model.pth  AMAT.O_history.npz
backend/scripts/: ingest_real_data.py
backend/tests/: test_fx.py  (+8 more)
docs/: AUTHENTICATION.md  GPU_SUPPORT.md
frontend/: app.js  backtest.html  dashboard.html  data.html  factors.html  index.html  login.html  portfolio.html  register.html  settings.html  style.css  watchlist.html
scripts/: benchmark_gpu.py  benchmark_performance.py  check_gpu.py  final_verification.py  init_db.py  manual_test_analysis.py  quick_test.py  run_deployment_test.bat  start_server.py  stockanalysis.db  test_ak.py  test_api_live.py  test_auth.py  test_backtest.py  test_batch.py  test_cache.py  test_complete_auth.py  test_frontend_flow.py  test_gpu_training.py  train.py
tests/: test_data_fetcher.py
web/: README.md  package-lock.json  package.json  vite.config.js
(+39 files in other folders)
