[project]
name = "stockanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.8",
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch>=2.0.0",
    "uvicorn>=0.40.0",
]
